// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RoomPickerView > Storybook snapshots > renders the empty state when there is no room 1`] = `
<div>
  <div
    class="Flex-module_flex"
    style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: stretch; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-4x); --mx-flex-wrap: nowrap;"
  >
    <div
      class="Flex-module_flex PillInput-module_pillInput"
      style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: nowrap;"
    >
      <input
        autocomplete="off"
        class="PillInput-module_input"
        placeholder="Search rooms"
      />
    </div>
    <div
      class="_typography_6v6n8_153 _font-body-lg-regular_6v6n8_69 RoomPickerView-module_list RoomPickerView-module_emptyList"
    >
      No rooms found
    </div>
  </div>
</div>
`;

exports[`RoomPickerView > Storybook snapshots > renders the list of rooms 1`] = `
<div>
  <div
    class="Flex-module_flex"
    style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: stretch; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-4x); --mx-flex-wrap: nowrap;"
  >
    <div
      class="Flex-module_flex PillInput-module_pillInput"
      style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: nowrap;"
    >
      <div
        class="Flex-module_flex"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: wrap;"
      >
        <div
          class="Flex-module_flex Pill-module_pill"
          style="--mx-flex-display: inline-flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1-5x); --mx-flex-wrap: nowrap;"
        >
          <div
            style="width: 20px; height: 20px; background-color: rgb(204, 204, 204); border-radius: 50%;"
          />
          <span
            class="Pill-module_label"
            id="react-use-id-1"
          >
            Room 2
          </span>
          <button
            aria-describedby="react-use-id-1"
            aria-label="Delete"
            class="_icon-button_1215g_8 mx_Dialog_nonDialogButton"
            data-kind="primary"
            role="button"
            style="--cpd-icon-button-size: 16px;"
            tabindex="0"
          >
            <div
              class="_indicator-icon_147l5_17"
              style="--cpd-icon-button-size: 100%;"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <input
        autocomplete="off"
        class="PillInput-module_input PillInput-module_largerInput"
        placeholder="Search rooms"
      />
    </div>
    <div
      class="Flex-module_flex RichList-module_richList RoomPickerView-module_list"
      style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
    >
      <span
        class="RichList-module_title"
        id="react-use-id-2"
      >
        Rooms
      </span>
      <ul
        aria-labelledby="react-use-id-2"
        class="RichList-module_content"
        role="listbox"
        tabindex="0"
      >
        <li
          aria-label="Room 1"
          aria-selected="false"
          class="RichItem-module_richItem"
          role="option"
          tabindex="-1"
        >
          <div
            class="Flex-module_flex RichItem-module_avatar"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
          >
            <div
              style="width: 32px; height: 32px; background-color: rgb(204, 204, 204); border-radius: 50%;"
            />
          </div>
          <span
            class="RichItem-module_title"
          >
            Room 1
          </span>
          <span
            class="RichItem-module_description"
          >
            #room1:matrix.org
          </span>
          <span
            class="RichItem-module_timestamp"
            role="timer"
          >
            145 days ago
          </span>
        </li>
        <li
          aria-label="Room 2"
          aria-selected="true"
          class="RichItem-module_richItem"
          role="option"
          tabindex="-1"
        >
          <div
            aria-hidden="true"
            class="Flex-module_flex RichItem-module_checkmark"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
          >
            <svg
              color="var(--cpd-color-icon-on-solid-primary)"
              fill="currentColor"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
              />
            </svg>
          </div>
          <span
            class="RichItem-module_title"
          >
            Room 2
          </span>
          <span
            class="RichItem-module_description"
          >
            #room2:matrix.org
          </span>
          <span
            class="RichItem-module_timestamp"
            role="timer"
          >
            145 days ago
          </span>
        </li>
        <li
          aria-label="Room 3"
          aria-selected="false"
          class="RichItem-module_richItem"
          role="option"
          tabindex="-1"
        >
          <div
            class="Flex-module_flex RichItem-module_avatar"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
          >
            <div
              style="width: 32px; height: 32px; background-color: rgb(204, 204, 204); border-radius: 50%;"
            />
          </div>
          <span
            class="RichItem-module_title"
          >
            Room 3
          </span>
          <span
            class="RichItem-module_description"
          >
            #room3:matrix.org
          </span>
          <span
            class="RichItem-module_timestamp"
            role="timer"
          >
            145 days ago
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`RoomPickerView > Storybook snapshots > renders the list without any selected room 1`] = `
<div>
  <div
    class="Flex-module_flex"
    style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: stretch; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-4x); --mx-flex-wrap: nowrap;"
  >
    <div
      class="Flex-module_flex PillInput-module_pillInput"
      style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: nowrap;"
    >
      <input
        autocomplete="off"
        class="PillInput-module_input"
        placeholder="Search rooms"
      />
    </div>
    <div
      class="Flex-module_flex RichList-module_richList RoomPickerView-module_list"
      style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
    >
      <span
        class="RichList-module_title"
        id="react-use-id-1"
      >
        Rooms
      </span>
      <ul
        aria-labelledby="react-use-id-1"
        class="RichList-module_content"
        role="listbox"
        tabindex="0"
      >
        <li
          aria-label="Room 1"
          aria-selected="false"
          class="RichItem-module_richItem"
          role="option"
          tabindex="-1"
        >
          <div
            class="Flex-module_flex RichItem-module_avatar"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
          >
            <div
              style="width: 32px; height: 32px; background-color: rgb(204, 204, 204); border-radius: 50%;"
            />
          </div>
          <span
            class="RichItem-module_title"
          >
            Room 1
          </span>
          <span
            class="RichItem-module_description"
          >
            #room1:matrix.org
          </span>
          <span
            class="RichItem-module_timestamp"
            role="timer"
          >
            145 days ago
          </span>
        </li>
        <li
          aria-label="Room 2"
          aria-selected="false"
          class="RichItem-module_richItem"
          role="option"
          tabindex="-1"
        >
          <div
            class="Flex-module_flex RichItem-module_avatar"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
          >
            <div
              style="width: 32px; height: 32px; background-color: rgb(204, 204, 204); border-radius: 50%;"
            />
          </div>
          <span
            class="RichItem-module_title"
          >
            Room 2
          </span>
          <span
            class="RichItem-module_description"
          >
            #room2:matrix.org
          </span>
          <span
            class="RichItem-module_timestamp"
            role="timer"
          >
            145 days ago
          </span>
        </li>
        <li
          aria-label="Room 3"
          aria-selected="false"
          class="RichItem-module_richItem"
          role="option"
          tabindex="-1"
        >
          <div
            class="Flex-module_flex RichItem-module_avatar"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
          >
            <div
              style="width: 32px; height: 32px; background-color: rgb(204, 204, 204); border-radius: 50%;"
            />
          </div>
          <span
            class="RichItem-module_title"
          >
            Room 3
          </span>
          <span
            class="RichItem-module_description"
          >
            #room3:matrix.org
          </span>
          <span
            class="RichItem-module_timestamp"
            role="timer"
          >
            145 days ago
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
